k8s/k8s-example-simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-example-simple
spec:
  selector:
    app: k8s-example-simple
  ports:
    - port: 8081
      name: http
  type: LoadBalancer
